--- a/matrix-sql/build.gradle
+++ b/matrix-sql/build.gradle
@@ -5,7 +5,8 @@ plugins {
     id('java-library')
     id('signing')
     id('maven-publish')
-    id("se.alipsa.nexus-release-plugin") version "1.0.1"
+    //id("se.alipsa.nexus-release-plugin") version "1.0.1"
+    id("se.alipsa.nexus-release-plugin") version '2.0.0-SNAPSHOT'
 }
 
 group = 'se.alipsa.matrix'
@@ -163,11 +164,8 @@ signing {
     }
 }
 
-if (project.ext.properties.sonatypeUsername) {
-
-    apply plugin: 'se.alipsa.nexus-release-plugin'
-    //apply plugin: 'se.alipsa.groovy.NexusReleasePlugin'
-    nexusReleasePlugin.nexusUrl = nexusUrl
-    nexusReleasePlugin.userName = sonatypeUsername
-    nexusReleasePlugin.password = sonatypePassword
+nexusReleasePlugin {
+    userName = project.ext.properties.sonatypeUsername
+    password = project.ext.properties.sonatypePassword
+    mavenPublication = publishing.publications.maven
 }
