--- a/matrix-bigquery/build.gradle
+++ b/matrix-bigquery/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.3.2'
+version = '0.3.3-SNAPSHOT'
 description = "Groovy library for importing and exporting to and from Google BigQuery to a Matrix"
 
 ext.releaseNexusUrl = version.toString().endsWith("SNAPSHOT")
@@ -48,7 +48,7 @@ dependencies {
     api 'com.google.cloud:google-cloud-resourcemanager:1.70.0'
     implementation platform('com.google.auth:google-auth-library-bom:1.37.1')
     implementation 'com.google.auth:google-auth-library-oauth2-http'
-    implementation('com.google.cloud:google-cloud-bigquerystorage:3.16.0')
+    implementation('com.google.cloud:google-cloud-bigquerystorage:3.16.1')
 
     testImplementation libs.groovy
     testImplementation testLibs.junitJupiterApi
