--- a/matrix-sql/build.gradle
+++ b/matrix-sql/build.gradle
@@ -10,7 +10,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '2.1.1'
+version = '2.1.2-SNAPSHOT'
 description = 'Groovy sql module for Matrix'
 
 ext.nexusUrl = version.contains("SNAPSHOT")
@@ -44,7 +44,7 @@ dependencies {
     testImplementation project(':matrix-datasets')
     implementation 'se.alipsa.groovy:data-utils:2.0.0'
     //implementation 'org.gradle:gradle-tooling-api:8.12' dont think we need this
-    implementation 'commons-io:commons-io:2.19.0'
+    implementation 'commons-io:commons-io:2.20.0'
     implementation 'se.alipsa.groovy:dependency-resolver:1.0.1'
     implementation 'se.alipsa:maven-3.9.4-utils:1.1.0'
     //implementation 'org.apache.logging.log4j:log4j-api:2.24.1'
