--- a/matrix-spreadsheet/build.gradle
+++ b/matrix-spreadsheet/build.gradle
@@ -11,7 +11,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '2.2.1'
+version = '2.2.2-SNAPSHOT'
 description = 'Groovy spreadsheet import/export'
 
 ext.nexusUrl = version.contains("SNAPSHOT")
@@ -54,7 +54,7 @@ dependencies {
     // https://github.com/dhatim/fastexcel
     implementation("org.dhatim:fastexcel:$fastExcelVersion")
     implementation("org.dhatim:fastexcel-reader:$fastExcelVersion")
-    implementation 'com.github.miachm.sods:SODS:1.6.8'
+    implementation 'com.github.miachm.sods:SODS:1.7.0'
 
 
     testImplementation testLibs.junitJupiterApi
