Change to more statically compiled

--- a/matrix-sql/build.gradle
+++ b/matrix-sql/build.gradle
@@ -158,7 +158,7 @@ publishing {
 
 signing {
     if (project.properties['signing.keyId'] != null) {
-        project.logger.lifecycle("Signing artifacts...")
+        //project.logger.lifecycle("Signing artifacts...")
         sign publishing.publications.maven
         //sign configurations.archives
     }
