--- a/matrix-datasets/build.gradle
+++ b/matrix-datasets/build.gradle
@@ -146,7 +146,7 @@ publishing {
 
 signing {
     if (project.properties['signing.keyId'] != null) {
-        project.logger.lifecycle("Signing artifacts...")
+        //project.logger.lifecycle("Signing artifacts...")
         sign publishing.publications.maven
     } else {
         project.logger.lifecycle("signing.keyId is not defined, skipping signing of artifacts...")
