--- a/matrix-parquet/build.gradle
+++ b/matrix-parquet/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.3.0'
+version = '0.3.1-SNAPSHOT'
 description = "Groovy library for importing and exporting parquet files to and from a Matrix"
 
 ext.nexusUrl = version.toString().endsWith("SNAPSHOT")
@@ -48,7 +48,7 @@ dependencies {
     //implementation 'com.jerolba:carpet-record:0.4.0' //must be loaded by Grab for now
     implementation 'org.apache.parquet:parquet-column:1.15.2'
     implementation 'org.apache.parquet:parquet-hadoop:1.15.2'
-    implementation('org.apache.hadoop:hadoop-common:3.4.1') {
+    implementation('org.apache.hadoop:hadoop-common:3.4.2') {
         //exclude group: 'org.slf4j'         // optional: avoid conflicts
         //exclude group: 'com.google.guava'  // optional: prevent old guava
         //exclude group: 'org.apache.hadoop.thirdparty'
@@ -57,7 +57,7 @@ dependencies {
         exclude group: 'io.netty'                   // ✅ Netty
         exclude group: 'com.squareup.okhttp3'       // optional, sometimes pulled transitively
     }
-    implementation 'org.apache.hadoop:hadoop-mapreduce-client-core:3.4.1'
+    implementation 'org.apache.hadoop:hadoop-mapreduce-client-core:3.4.2'
     testImplementation testLibs.junitJupiterApi
     testRuntimeOnly testLibs.junitJupiterEngine
     testRuntimeOnly testLibs.junitPlatformLauncher
