Wip adding support for google sheets

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,7 @@ include 'matrix-json'
 include 'matrix-spreadsheet'
 include 'matrix-charts'
 include 'matrix-sql'
+include 'matrix-gsheets'
 include 'matrix-examples:candles'
 include 'matrix-examples:HousePrices'
 include 'matrix-examples:LinearRegression'
