--- a/matrix-spreadsheet/build.gradle
+++ b/matrix-spreadsheet/build.gradle
@@ -12,7 +12,7 @@ plugins {
 
 group = 'se.alipsa.matrix'
 version = '2.2.2-SNAPSHOT'
-description = 'Groovy spreadsheet import/export'
+description = 'Matrix spreadsheet import/export'
 
 ext.nexusUrl = version.contains("SNAPSHOT")
     ? "https://oss.sonatype.org/content/repositories/snapshots/"
