--- a/matrix-gsheets/build.gradle
+++ b/matrix-gsheets/build.gradle
@@ -58,15 +58,18 @@ dependencies {
 
 test {
   jvmArgs '-Xmx2g'
-  useJUnitPlatform() {
-    excludeTags 'external'
-  }
+  useJUnitPlatform()
 
-  // Allow enabling from CLI:  -PrunExternalTests=true  (or env RUN_EXTERNAL_TESTS=true)
-  def runExternal = (project.findProperty('runExternalTests') ?: System.getenv('RUN_EXTERNAL_TESTS'))?.toString()?.toBoolean() ?: false
-  if (runExternal) {
+  // Enable via: -PrunExternalTests=true  or env RUN_EXTERNAL_TESTS=true  or -DRUN_EXTERNAL_TESTS=true
+  def runExternal = (findProperty('runExternalTests')
+      ?: System.getenv('RUN_EXTERNAL_TESTS')
+      ?: System.getProperty('RUN_EXTERNAL_TESTS'))
+      ?.toString()?.toBoolean() ?: false
+
+  if (!runExternal) {
+    // only exclude when the flag is off
     useJUnitPlatform {
-      excludeTags()          // clear the default exclusion
+      excludeTags 'external'
     }
   }
   testLogging {
@@ -105,106 +108,106 @@ test {
       }
     }
   }
+}
 
-  tasks.register('antGroovydoc', DefaultTask) {
-    group = 'documentation'
-    description = 'Generate Groovydoc using Ant with custom config'
+tasks.register('antGroovydoc', DefaultTask) {
+  group = 'documentation'
+  description = 'Generate Groovydoc using Ant with custom config'
 
-    doLast {
-      def outputDir = layout.buildDirectory.dir("groovydocant").get().asFile
+  doLast {
+    def outputDir = layout.buildDirectory.dir("groovydocant").get().asFile
 
-      ant.taskdef(
-          name: 'groovydoc',
-          classname: 'org.codehaus.groovy.ant.Groovydoc',
-          classpath: sourceSets.main.compileClasspath.asPath
-      )
+    ant.taskdef(
+        name: 'groovydoc',
+        classname: 'org.codehaus.groovy.ant.Groovydoc',
+        classpath: sourceSets.main.compileClasspath.asPath
+    )
 
-      ant.groovydoc(
-          destdir: outputDir,
-          sourcepath: sourceSets.main.groovy.srcDirs.join(':'),
-          packagenames: '*',
-          javaVersion: 'JAVA_21',
-          doctitle: "${project.name} ${project.version}",
-          windowtitle: "${project.name} ${project.version}"
-      ) {
-        // Does not work, groovydoc does not support modules e,g,
-        //  URL will become https://docs.oracle.com/en/java/javase/21/docs/api/java/net/URL.html
-        //  instead of https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/net/URL.html
-        //link packages: 'java.', href: 'https://docs.oracle.com/en/java/javase/21/docs/api/'
-        link packages:"groovy.,org.codehaus.groovy.", href: "http://docs.groovy-lang.org/latest/html/api/"
-      }
+    ant.groovydoc(
+        destdir: outputDir,
+        sourcepath: sourceSets.main.groovy.srcDirs.join(':'),
+        packagenames: '*',
+        javaVersion: 'JAVA_21',
+        doctitle: "${project.name} ${project.version}",
+        windowtitle: "${project.name} ${project.version}"
+    ) {
+      // Does not work, groovydoc does not support modules e,g,
+      //  URL will become https://docs.oracle.com/en/java/javase/21/docs/api/java/net/URL.html
+      //  instead of https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/net/URL.html
+      //link packages: 'java.', href: 'https://docs.oracle.com/en/java/javase/21/docs/api/'
+      link packages:"groovy.,org.codehaus.groovy.", href: "http://docs.groovy-lang.org/latest/html/api/"
     }
   }
+}
 
-  tasks.register('javadocJar', Jar) {
-    dependsOn tasks.named('antGroovydoc')
-    archiveClassifier.set('javadoc')
-    from layout.buildDirectory.dir("groovydocant")
-  }
+tasks.register('javadocJar', Jar) {
+  dependsOn tasks.named('antGroovydoc')
+  archiveClassifier.set('javadoc')
+  from layout.buildDirectory.dir("groovydocant")
+}
 
-  tasks.register('sourcesJar', Jar) {
-    dependsOn tasks.named('classes')
-    archiveClassifier.set('sources')
-    from sourceSets.main.allSource
-  }
+tasks.register('sourcesJar', Jar) {
+  dependsOn tasks.named('classes')
+  archiveClassifier.set('sources')
+  from sourceSets.main.allSource
+}
 
-  publishing {
-    publications {
-      maven(MavenPublication) {
-        from components.java
-        artifact(javadocJar)
-        artifact(sourcesJar)
-        pom {
-          name = 'Matrix import/export for Google Sheets'
-          description = "${project.description}"
-          url = "https://github.com/Alipsa/matrix/matrix-gsheets"
-          properties = [
-              'maven.compiler.release': "${javaCompile.options.release.get()}"
-          ]
-          licenses {
-            license {
-              name = 'MIT License'
-              url = 'https://raw.githubusercontent.com/Alipsa/matrix/matrix-gsheets/master/LICENSE'
-            }
-          }
-          developers {
-            developer {
-              id = 'perNyfelt'
-              name = 'Per Nyfelt'
-            }
-          }
-          scm {
-            url = 'https://github.com/Alipsa/matrix/matrix-gsheets/tree/master'
-            connection = 'scm:git:https://github.com/Alipsa/matrix.git'
-            developerConnection = 'scm:git:https://github.com/Alipsa/matrix.git'
+publishing {
+  publications {
+    maven(MavenPublication) {
+      from components.java
+      artifact(javadocJar)
+      artifact(sourcesJar)
+      pom {
+        name = 'Matrix import/export for Google Sheets'
+        description = "${project.description}"
+        url = "https://github.com/Alipsa/matrix/matrix-gsheets"
+        properties = [
+            'maven.compiler.release': "${javaCompile.options.release.get()}"
+        ]
+        licenses {
+          license {
+            name = 'MIT License'
+            url = 'https://raw.githubusercontent.com/Alipsa/matrix/matrix-gsheets/master/LICENSE'
           }
         }
-      }
-    }
-    if (project.ext.properties.sonatypeUsername) {
-      repositories {
-        maven {
-          credentials {
-            username = sonatypeUsername
-            password = sonatypePassword
+        developers {
+          developer {
+            id = 'perNyfelt'
+            name = 'Per Nyfelt'
           }
+        }
+        scm {
+          url = 'https://github.com/Alipsa/matrix/matrix-gsheets/tree/master'
+          connection = 'scm:git:https://github.com/Alipsa/matrix.git'
+          developerConnection = 'scm:git:https://github.com/Alipsa/matrix.git'
         }
       }
     }
   }
-
-  signing {
-    if (project.properties['signing.keyId'] != null) {
-      //project.logger.lifecycle("Signing artifacts...")
-      sign publishing.publications.maven
-    } else {
-      project.logger.lifecycle("signing.keyId is not defined, skipping signing of artifacts...")
+  if (project.ext.properties.sonatypeUsername) {
+    repositories {
+      maven {
+        credentials {
+          username = sonatypeUsername
+          password = sonatypePassword
+        }
+      }
     }
   }
+}
 
-  nexusReleasePlugin {
-    userName = project.ext.properties.sonatypeUsername
-    password = project.ext.properties.sonatypePassword
-    mavenPublication = publishing.publications.maven
+signing {
+  if (project.properties['signing.keyId'] != null) {
+    //project.logger.lifecycle("Signing artifacts...")
+    sign publishing.publications.maven
+  } else {
+    project.logger.lifecycle("signing.keyId is not defined, skipping signing of artifacts...")
   }
+}
+
+nexusReleasePlugin {
+  userName = project.ext.properties.sonatypeUsername
+  password = project.ext.properties.sonatypePassword
+  mavenPublication = publishing.publications.maven
 }
