--- a/matrix-bigquery/build.gradle
+++ b/matrix-bigquery/build.gradle
@@ -4,11 +4,11 @@ plugins {
     id 'signing'
     id 'maven-publish'
     // id("se.alipsa.nexus-release-plugin") version "1.0.1"
-    id("se.alipsa.nexus-release-plugin") version '2.0.0-SNAPSHOT'
+    id("se.alipsa.nexus-release-plugin") version '2.0.0'
 }
 
 group = 'se.alipsa.matrix'
-version = '0.4.0'
+version = '0.4.1-SNAPSHOT'
 description = "Groovy library for importing and exporting to and from Google BigQuery to a Matrix"
 
 ext.releaseNexusUrl = version.toString().endsWith("SNAPSHOT")
