--- a/matrix-bom/pom.xml
+++ b/matrix-bom/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <!-- Verification tests that the bom works as expected -->
   <modelVersion>4.0.0</modelVersion>
   <groupId>se.alipsa.matrix</groupId>
   <artifactId>matrix-bom-tests</artifactId>
-  <version>2.3.0</version>
+  <version>2.3.1-SNAPSHOT</version>
   <name>Test of Matrix BOM</name>
+  <description>Verification tests that the Matrix bom works as expected</description>
   <packaging>jar</packaging>
   <url>https://github.com/Alipsa/matrix</url>
   <properties>
