--- a/matrix-charts/build.gradle
+++ b/matrix-charts/build.gradle
@@ -5,12 +5,11 @@ plugins {
   //id 'org.openjfx.javafxplugin' version '0.0.13'
   id('maven-publish')
   id('signing')
-  //id("se.alipsa.nexus-release-plugin") version "1.0.1"
-  id("se.alipsa.nexus-release-plugin") version '2.0.0-SNAPSHOT'
+  id("se.alipsa.nexus-release-plugin") version '2.0.0'
 }
 
 group = 'se.alipsa.matrix'
-version = '0.3.1'
+version = '0.3.2-SNAPSHOT'
 description = "Groovy chart library for plotting with matrix ([][] data)"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
