--- a/matrix-json/build.gradle
+++ b/matrix-json/build.gradle
@@ -4,11 +4,11 @@ plugins {
   id('signing')
   id('maven-publish')
   //id("se.alipsa.nexus-release-plugin") version "1.0.1"
-  id("se.alipsa.nexus-release-plugin") version '2.0.0-SNAPSHOT'
+  id("se.alipsa.nexus-release-plugin") version '2.0.0'
 }
 
 group = 'se.alipsa.matrix'
-version = '2.1.1'
+version = '2.1.2-SNAPSHOT'
 description = "Groovy library for importing and exporting json to and from a Matrix or Grid"
 
 ext.nexusUrl = version.toString().endsWith("SNAPSHOT")
