--- a/matrix-stats/build.gradle
+++ b/matrix-stats/build.gradle
@@ -8,11 +8,11 @@ plugins {
   id('signing')
   id('maven-publish')
   //id("se.alipsa.nexus-release-plugin") version "1.0.1"
-  id("se.alipsa.nexus-release-plugin") version '2.0.0-SNAPSHOT'
+  id("se.alipsa.nexus-release-plugin") version '2.0.0'
 }
 
 group = 'se.alipsa.matrix'
-version = '2.2.0'
+version = '2.2.1-SNAPSHOT'
 description = "Statistical hypothesis tests based on Matrix data."
 
 ext.nexusUrl = version.contains("SNAPSHOT")
