--- a/matrix-tablesaw/build.gradle
+++ b/matrix-tablesaw/build.gradle
@@ -7,7 +7,7 @@ plugins {
     id('signing')
     id('maven-publish')
     //id("se.alipsa.nexus-release-plugin") version "1.0.1"
-    id("se.alipsa.nexus-release-plugin") version '2.0.0-SNAPSHOT'
+    id("se.alipsa.nexus-release-plugin") version '2.0.0'
     id("com.github.ben-manes.versions").version("0.52.0")
 }
 
