--- a/matrix-xchart/build.gradle
+++ b/matrix-xchart/build.gradle
@@ -4,11 +4,11 @@ plugins {
     id('maven-publish')
     id('signing')
     //id("se.alipsa.nexus-release-plugin") version "1.0.1"
-    id("se.alipsa.nexus-release-plugin") version '2.0.0-SNAPSHOT'
+    id("se.alipsa.nexus-release-plugin") version '2.0.0'
 }
 
 group = 'se.alipsa.matrix'
-version = '0.2.2'
+version = '0.2.3-SNAPSHOT'
 description = "Groovy library for creating charts with xcharts using matrix ([][] data)"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
