--- a/matrix-gsheets/build.gradle
+++ b/matrix-gsheets/build.gradle
@@ -38,14 +38,14 @@ dependencies {
   compileOnly libs.groovyJson
   compileOnly libs.groovyTemplates
   compileOnly project(':matrix-core')
-  implementation 'com.google.auth:google-auth-library-oauth2-http:1.39.0'
+  implementation 'com.google.auth:google-auth-library-oauth2-http:1.39.1'
   implementation 'com.google.apis:google-api-services-oauth2:v2-rev20200213-2.0.0'
-  implementation 'com.google.http-client:google-http-client-gson:2.0.0'
+  implementation 'com.google.http-client:google-http-client-gson:2.0.1'
   implementation 'com.google.api-client:google-api-client:2.8.1'
   implementation 'com.google.oauth-client:google-oauth-client-jetty:1.39.0'
   implementation 'com.google.apis:google-api-services-sheets:v4-rev20250616-2.0.0'
   // For deleting sheets
-  implementation 'com.google.apis:google-api-services-drive:v3-rev20250829-2.0.0'
+  implementation 'com.google.apis:google-api-services-drive:v3-rev20250910-2.0.0'
   implementation libs.log4jApi
   testImplementation project(':matrix-core')
   testImplementation testLibs.junitJupiterApi
@@ -203,7 +203,7 @@ signing {
     //project.logger.lifecycle("Signing artifacts...")
     sign publishing.publications.maven
   } else {
-    project.logger.lifecycle("signing.keyId is not defined, skipping signing of artifacts...")
+    project.logger.debug("signing.keyId is not defined, skipping signing of artifacts...")
   }
 }
 
