--- a/matrix-spreadsheet/build.gradle
+++ b/matrix-spreadsheet/build.gradle
@@ -209,7 +209,7 @@ signing {
         //project.logger.lifecycle("Signing artifacts...")
         sign publishing.publications.maven
     } else {
-        project.logger.lifecycle("signing.keyId is not defined, skipping signing of artifacts...")
+        project.logger.debug("signing.keyId is not defined, skipping signing of artifacts...")
     }
 }
 
