--- a/matrix-stats/build.gradle
+++ b/matrix-stats/build.gradle
@@ -45,7 +45,7 @@ dependencies {
 
   implementation 'org.apache.commons:commons-math3:3.6.1'
   testImplementation libs.groovy
-  testImplementation 'com.github.haifengl:smile-core:4.4.1'
+  testImplementation 'com.github.haifengl:smile-core:4.4.2'
   testImplementation("se.alipsa:jfinancials:1.0.0")
   testImplementation testLibs.junitJupiterApi
   testRuntimeOnly testLibs.junitPlatformLauncher
@@ -154,7 +154,7 @@ signing {
     //project.logger.lifecycle("Signing artifacts...")
     sign publishing.publications.maven
   } else {
-    project.logger.lifecycle("signing.keyId is not defined, skipping signing of artifacts...")
+    project.logger.debug("signing.keyId is not defined, skipping signing of artifacts...")
   }
 }
 
