--- a/matrix-bom/pom.xml
+++ b/matrix-bom/pom.xml
@@ -91,6 +91,10 @@
       <artifactId>matrix-xchart</artifactId>
     </dependency>
     <dependency>
+      <groupId>se.alipsa.matrix</groupId>
+      <artifactId>matrix-avro</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>testcontainers</artifactId>
       <version>1.21.3</version>
