upgrade to groovy 5.0.2. Add support for Creading a MatrixSql based only on the url.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ build/
 /matrix-sql/derby.log
 /matrix-examples/AnalysisScenario1/analysis_results/
 **/out/**
+/matrix-examples/LinearRegression/cars.png
