--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -22,6 +22,8 @@ dependencyResolutionManagement {
       library('junitJupiterEngine', "org.junit.jupiter:junit-jupiter-engine:$junitVersion")
       library('junitJupiterApi', "org.junit.jupiter:junit-jupiter-api:$junitVersion")
       library('slf4jSimple', "org.slf4j:slf4j-simple:2.0.17")
+
+      // Contains an slf4j implementation, dont use slf4j-simple if you use this
       library('log4jToSlf4j', 'org.apache.logging.log4j:log4j-slf4j2-impl:2.25.2')
     }
   }
